@@ -5943,7 +5943,7 @@ The value takes effect whenever you tell a window to display this buffer;
 for instance, with `set-window-buffer' or when `display-buffer' displays it.
 
 A value of `bottom' means put the horizontal scroll bar at the bottom of
-the window; a value of nil means don't show any horizonal scroll bars.
+the window; a value of nil means don't show any horizontal scroll bars.
 A value of t (the default) means do whatever the window's frame
 specifies.  */);
 
